# coreMQTT

tools/cmsis/: CMakeLists.txt  cmsis_metadata.yml
